2008-04-13  Andreas Kirschbaum

	* Remove support for servers not supporting the spellmon=1 setup
	command.

2008-04-12  Andreas Kirschbaum

	* ragnorok: Add label and tooltip to experience gauge.

	* Fix display of negative grace values.

2008-04-11  Andreas Kirschbaum

	* Fix crash when the log window merges duplicate messages.

2008-03-30  Andreas Kirschbaum

	* Add screenshot command.

2008-03-24  Andreas Kirschbaum

	* Fix magic map parser to include more details.

2008-03-23  Andreas Kirschbaum

	* Fix #1881471 (Can't see statistics at character creation) by
	automatically opening both messages and status dialogs when
	creating a new character.

	* Fix #1864274 (Disappearing message window).

2008-03-22  Andreas Kirschbaum

	* Reliably show/hide tooltips when opening or closing dialogs.

	* Add tooltips to server entries in server selection dialog.

	* Remember last used server name.

	* Suppress spurious "low food" warning while logging in.

2008-03-21  Andreas Kirschbaum

	* Suppress spurious "level up" sound at re-login.

	* Merge duplicate messages in message window.

	* Do not crash when connecting to an outdated server.

2008-03-19  Andreas Kirschbaum

	* ragnorok: Make the "Chat" tab (somewhat) work on branch servers.

2008-03-12  Andreas Kirschbaum

	* Forget inventory and ground information when server connection
	breaks.

	* ragnorok: Display items in correct order in inventory view.

2008-01-29  Andreas Kirschbaum

	* ragnorok: Display weight/weight limit in inventory dialog.

2008-01-21  Andreas Kirschbaum

	* ragnorok: Add tabs ("All", "Important", "Chat") to message
	dialog. All contains all messages, Important omits combat related
	messages, Chat includes communication only.

2008-01-20  Andreas Kirschbaum

	* Fix book dialogs: correctly display long text lines and
	interpret media tags.

	* Display book titles.

	* Fix image cache: re-request changed faces from the server.

2008-01-19  Andreas Kirschbaum

	* Add scroll bar to message window.
