@@ -1,5 +1,8 @@
 2008-04-13  Andreas Kirschbaum
 
+	* Replace the question mark of a spell when the face becomes
+	available.
+
 	* Remove support for servers not supporting the spellmon=1 setup
 	command.
 
